till increase view

--- a/frontend/play.folder/play.html
+++ b/frontend/play.folder/play.html
@@ -32,8 +32,8 @@
     <div class="container play-container">
         <div class="row">
             <div class="play-video">
-                <video controls autoplay>
-                    <source src="/frontend/image.folder/youtube.mp4" type="video/mp4"  class="vid">
+                <video controls autoplay  class="videoControll">
+                    <source src="http://res.cloudinary.com/dkfsnygg3/video/upload/v1729358369/vteyg6aiwchrwaeamcki.mp4" type="video/mp4"  class="vid">
                 </video>
                 <div class="tags">
                     <a href="">#conding</a> 
@@ -73,23 +73,82 @@
                         <input type="text" placeholder="Write comments...">
                      </div>
 
-                     <div class="old-commennts">
+                     <div class="old-comments">
                         <img src="/frontend/image.folder/avatar.jpg" alt="">
                         <div>
                             <h3>UserName <span>2 days ago</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
+                            <div class="comment-action">
+                                <img src="/frontend/image.folder/like.png">
+                                <span>244</span>
+                                <img src="/frontend/image.folder/dislike.png" >
+                                <span>2</span>
+                                <span>reply</span>
+                                <a href="">All reply</a>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="old-comments">
+                        <img src="/frontend/image.folder/avatar.jpg" alt="">
+                        <div>
+                            <h3>UserName <span>2 days ago</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
+                            <div class="comment-action">
+                                <img src="/frontend/image.folder/like.png">
+                                <span>244</span>
+                                <img src="/frontend/image.folder/dislike.png" >
+                                <span>2</span>
+                                <span>reply</span>
+                                <a href="">All reply</a>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="old-comments">
+                        <img src="/frontend/image.folder/avatar.jpg" alt="">
+                        <div>
+                            <h3>UserName <span>2 days ago</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
+                            <div class="comment-action">
+                                <img src="/frontend/image.folder/like.png">
+                                <span>244</span>
+                                <img src="/frontend/image.folder/dislike.png" >
+                                <span>2</span>
+                                <span>reply</span>
+                                <a href="">All reply</a>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="old-comments">
+                        <img src="/frontend/image.folder/avatar.jpg" alt="">
+                        <div>
+                            <h3>UserName <span>2 days ago</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
+                            <div class="comment-action">
+                                <img src="/frontend/image.folder/like.png">
+                                <span>244</span>
+                                <img src="/frontend/image.folder/dislike.png" >
+                                <span>2</span>
+                                <span>reply</span>
+                                <a href="">All reply</a>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="old-comments">
+                        <img src="/frontend/image.folder/avatar.jpg" alt="">
+                        <div>
+                            <h3>UserName <span>2 days ago</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
+                            <div class="comment-action">
+                                <img src="/frontend/image.folder/like.png">
+                                <span>244</span>
+                                <img src="/frontend/image.folder/dislike.png" >
+                                <span>2</span>
+                                <span>reply</span>
+                                <a href="">All reply</a>
+                            </div>
                         </div>
                      </div>
                  </div>
-
-
-
-
-
-
-
-
-
             </div>
             <div class="right-sidebar">
                  
@@ -155,4 +214,6 @@
 
 
 </body>
+
+<script src="play.script.js"></script>
 </html>
