login page is complete

--- a/frontend/trial/index.html
+++ b/frontend/trial/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Video Player</title>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Document</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="video-container"></div>
-  <script src="script.js"></script>
+     <form id="uploadForm">
+          <input type="file" id="imageInput" accept="image/*">
+          <button type="submit">Upload Image</button>
+      </form>
+      
 </body>
+<script src="script.js"></script>
 </html>
