--- a/frontend/login_page/login.html
+++ b/frontend/login_page/login.html
@@ -4,10 +4,10 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="login.style.css">
      <script src="https://kit.fontawesome.com/0a4e95c234.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body> 
      <div class="container">
           <div class="form-box">
                <h1 id="title">Sign UP</h1>
@@ -45,13 +45,15 @@
                               <input type="file" class="coverImage" hidden>
                          </div>
                          <p>Lost password? <a href="#">click here!</a></p>
+                         <div class="alert">
+                             wrong credential
+                         </div>
                     </div>
-                    <button type="submit" class="submit">Submit</button>
+                   
+                    <button type="submit" class="submit">Submit <a href=""></a></button>
                </form>
           </div>
-
-
      </div>
 </body>
-<script src="script.js"></script>
+<script src="login.script.js"></script>
 </html>
