search function complete

--- a/frontend/play.folder/play.html
+++ b/frontend/play.folder/play.html
@@ -14,13 +14,18 @@
                   <img src="/frontend/image.folder/logo_light.png" class="logo_icon">
               </div>
       
-              <div class="nav-middle">
-                  <div class="search-box">
-                      <input type="text" placeholder="Search">
-                      <img src="/frontend/image.folder/search.png" class="search_icon">
-                  </div>
-                  <img src="/frontend/image.folder/mike.png" class="mike_icon">
-              </div>
+ <!-- -------------------nav-mid------------- -->
+
+ <div class="nav-middle">
+    <div class="search-box">
+            <input type="text" placeholder="Search" class="search_input" >
+        <img src="/frontend/image.folder/search.png" class="search_icon">
+    </div>
+    <img src="/frontend/image.folder/mike.png" class="mike_icon">
+</div>
+
+<!-- -----nav-right--- -->
+        
               <div class="nav-right ">
                   <ul class="nav_ul">
                       <li class="nav_li  upload_li">
