--- a/frontend/history_page/history.html
+++ b/frontend/history_page/history.html
@@ -14,13 +14,17 @@
                   <img src="/frontend/image.folder/logo_light.png" class="logo_icon">
               </div>
       
-              <div class="nav-middle">
-                  <div class="search-box">
-                      <input type="text" placeholder="Search">
-                      <img src="/frontend/image.folder/search.png" class="search_icon">
-                  </div>
-                  <img src="/frontend/image.folder/mike.png" class="mike_icon">
-              </div>
+ <!-- -------------------nav-mid------------- -->
+
+ <div class="nav-middle">
+    <div class="search-box">
+            <input type="text" placeholder="Search" class="search_input" >
+        <img src="/frontend/image.folder/search.png" class="search_icon">
+    </div>
+    <img src="/frontend/image.folder/mike.png" class="mike_icon">
+</div>
+
+<!-- -----nav-right--- -->
               <div class="nav-right ">
                   <ul class="nav_ul">
                       <li class="nav_li  upload_li">
@@ -68,7 +72,7 @@
 
  <div class="sidebar">
      <div class="shortcut-link">
-         <a href="" class="short sign"><img src="/frontend/image.folder/home.png" alt=""><p>Home</p> </a>
+         <a href="/view/index.html?flag=signin" class="short sign"><img src="/frontend/image.folder/home.png" alt=""><p>Home</p> </a>
          <a href=""  class="short sign"><img src="/frontend/image.folder/explore.png" alt=""><p>Explore</p></a>
          <a href="" class="short sign"><img src="/frontend/image.folder/subscription.png" alt=""><p>Subcriptions</p></a>
        <hr>
@@ -78,8 +82,8 @@
          <a href="" class="short"><img src="/frontend/image.folder/playlist.png" alt=""><p>playlist</p></a>
          <a href="" class="short"><img src="/frontend/image.folder/liked_video.png" alt=""><p>Liked video</p></a>
        <hr class="hr">
-         <a href="" class="short singInInfo sign"><p class="info">Sign in to like videos, comment, and subscribe.</p> <button class="signInBtn sidebar_signInBtn"><img src="../frontend/image.folder/signin.png" id="avatar"><p>sign in</p></button> </a>
-       <hr>
+         <!-- <a href="" class="short singInInfo sign"><p class="info">Sign in to like videos, comment, and subscribe.</p> <button class="signInBtn sidebar_signInBtn"><img src="../frontend/image.folder/signin.png" id="avatar"><p>sign in</p></button> </a> -->
+       <!-- <hr> -->
      </div>
      
      <div class="subscribed-list">
