--- a/frontend/upload_page/upload.html
+++ b/frontend/upload_page/upload.html
@@ -70,7 +70,7 @@
 
 <div class="sidebar">
    <div class="shortcut-link">
-       <a href="" class="short sign"><img src="/frontend/image.folder/home.png" alt=""><p>Home</p> </a>
+       <a href="/view/index.html?flag=signin" class="short sign"><img src="/frontend/image.folder/home.png" alt=""><p>Home</p> </a>
        <a href=""  class="short sign"><img src="/frontend/image.folder/explore.png" alt=""><p>Explore</p></a>
        <a href="" class="short sign"><img src="/frontend/image.folder/subscription.png" alt=""><p>Subcriptions</p></a>
      <hr>
