--- a/frontend/search_page/search.html
+++ b/frontend/search_page/search.html
@@ -87,13 +87,11 @@
      </div>
      
      <div class="subscribed-list">
-         <H3>SUBSCRIBED</H3>
-         <a href=""><img src="/frontend/image.folder/avatar.png">shah rahul</a>
-         <a href=""><img src="/frontend/image.folder/avatar.png">shah rahul</a>
-         <a href=""><img src="/frontend/image.folder/avatar.png">shah rahul</a>
-         <a href=""><img src="/frontend/image.folder/avatar.png">shah rahul</a>
-         <a href=""><img src="/frontend/image.folder/avatar.png">shah rahul</a>
-     </div>
+        <H3>SUBSCRIBED</H3>
+        <div class="subscribed_content">
+            
+        </div>
+    </div>
 </div>
 
 
