--- a/frontend/login_page/login.html
+++ b/frontend/login_page/login.html
@@ -15,7 +15,7 @@
                     <button type="button" id="signupBtn">Sign up</button>
                     <button type="button" class="disable" id="signinBtn">Sign in</button>
                </div>
-               <form action="#">
+               <form action="#" enctype="multipart/form-data">
                     <div class="input-group">
                          <div class="input-field" id="username">
                               <i class="fa-solid fa-user"></i>
