--- a/frontend/upload_page/upload.html
+++ b/frontend/upload_page/upload.html
@@ -25,7 +25,7 @@
 <!-- -----nav-right--- -->
         <div class="nav-right ">
             <ul class="nav_ul">
-
+                <!-- baka  ddmigitti -->
                 <li class="nav_li  upload_li">
                     <img src="/frontend/image.folder/upload.png" class="upload invert">
                     <div class="sub-class">
