--- a/frontend/profile_page/profile.html
+++ b/frontend/profile_page/profile.html
@@ -219,10 +219,10 @@
                 </div>
                 <div class="option">
                     <img src="/frontend/image.folder/option.png" alt="" class="edit_delete">
-                    <div class="option_sub_class">
+                    <div class="option_sub_class" id="ks">
                         <ul class="option_ul">
-                            <li class="option_li"><img src="/frontend/image.folder/edit.png" alt="">edit</li>
-                            <li class="option_li"><img src="/frontend/image.folder/delete.png" alt="">delete</li>
+                            <li class="option_li"><img src="/frontend/image.folder/edit.png" alt="" class="tweet_edit">edit</li>
+                            <li class="option_li tweet_delete"><img src="/frontend/image.folder/delete.png" alt="">delete</li>
                         </ul>
                     </div>
                 </div>
