tweet_edit complete

--- a/frontend/profile_page/profile.html
+++ b/frontend/profile_page/profile.html
@@ -180,7 +180,9 @@
                 </div>
                 <div class="tweet_detail">
                         <textarea name="tweet_name" id="text-area" placeholder="Share your thought ....." class="tweet_input" ></textarea>
-                        <!-- <input type="text" placeholder="Share your though and Image to start a caption contest" class="tweet_input"> -->
+                </div>
+                <div class="uploaded_image">
+                    <img src="/frontend/image.folder/harry.jpeg" alt="" class="tweet_img_element">
                 </div>
                 <div class="tweet_photo">
                     <div class="image_detail">
@@ -197,7 +199,7 @@
                 <h3>PUBLISHED</h3>
                 <hr>
             </div>
-            <div class="show">
+            <!-- <div class="show">
                 <div class="show_avatar">
                     <img src="/frontend/image.folder/avatar.jpg" alt="" id="avatar">
                 </div>
@@ -213,8 +215,11 @@
                         </div>
 
                         <div class="tweet_reaction">
-                            <img src="/frontend/image.folder/like.png" alt="">
-                            <img src="/frontend/image.folder/dislike.png" alt="">
+                            <div>
+                                <img src="/frontend/image.folder/like.png" alt="">
+                                <img src="/frontend/image.folder/dislike.png" alt="">
+                            </div>
+                            <button class="tweet_update_button" style="display: none;">post</button>
                         </div>
                 </div>
                 <div class="option">
@@ -226,7 +231,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="smaller_community">
                 
             </div>
