add comment complete

--- a/frontend/play.folder/play.html
+++ b/frontend/play.folder/play.html
@@ -109,86 +109,49 @@
                     <p>Subscripe Easy Tutorials to watch more tutorial on wev development</p>
                     <hr>
                     <h4>134 comments</h4>
-                     <div class="add-comments">
-                        <img src="/frontend/image.folder/avatar.jpg">
-                        <input type="text" placeholder="Write comments...">
-                     </div>
-
-                     <div class="old-comments">
-                        <img src="/frontend/image.folder/avatar.jpg" alt="">
-                        <div>
-                            <h3>UserName <span>2 days ago</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
-                            <div class="comment-action">
-                                <img src="/frontend/image.folder/like.png">
-                                <span>244</span>
-                                <img src="/frontend/image.folder/dislike.png" >
-                                <span>2</span>
-                                <span>reply</span>
-                                <a href="">All reply</a>
-                            </div>
+                     <div class="add_comments">
+                        <img src="/frontend/image.folder/avatar.jpg" id="avatar">
+                        <div class="text_submit">
+                            <textarea name="" id="" placeholder="Write Comments..." class="comment_input_element"></textarea>
+                            <!-- <textarea type="text" placeholder="Write comments..."> -->
+                            <!-- <hr style="background-color: blue; height: 20px;" > -->
+                             <button class="comment_button">comment</button>
                         </div>
+                       
                      </div>
-                     <div class="old-comments">
-                        <img src="/frontend/image.folder/avatar.jpg" alt="">
-                        <div>
-                            <h3>UserName <span>2 days ago</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
-                            <div class="comment-action">
-                                <img src="/frontend/image.folder/like.png">
-                                <span>244</span>
-                                <img src="/frontend/image.folder/dislike.png" >
-                                <span>2</span>
-                                <span>reply</span>
-                                <a href="">All reply</a>
+                     <!-- <hr> -->
+                      <div class="commentBox">
+                            <div class="old-comments">
+                                <img src="/frontend/image.folder/avatar.jpg" alt="">
+                                <div>
+                                    <h3>UserName <span>2 days ago</span></h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
+                                    <div class="comment-action">
+                                        <img src="/frontend/image.folder/like.png">
+                                        <span>244</span>
+                                        <img src="/frontend/image.folder/dislike.png" >
+                                        <span>2</span>
+                                        <span>reply</span>
+                                        <a href="">All reply</a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                     </div>
-                     <div class="old-comments">
-                        <img src="/frontend/image.folder/avatar.jpg" alt="">
-                        <div>
-                            <h3>UserName <span>2 days ago</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
-                            <div class="comment-action">
-                                <img src="/frontend/image.folder/like.png">
-                                <span>244</span>
-                                <img src="/frontend/image.folder/dislike.png" >
-                                <span>2</span>
-                                <span>reply</span>
-                                <a href="">All reply</a>
+                            <div class="old-comments">
+                                <img src="/frontend/image.folder/avatar.jpg" alt="">
+                                <div>
+                                    <h3>UserName <span>2 days ago</span></h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
+                                    <div class="comment-action">
+                                        <img src="/frontend/image.folder/like.png">
+                                        <span>244</span>
+                                        <img src="/frontend/image.folder/dislike.png" >
+                                        <span>2</span>
+                                        <span>reply</span>
+                                        <a href="">All reply</a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                     </div>
-                     <div class="old-comments">
-                        <img src="/frontend/image.folder/avatar.jpg" alt="">
-                        <div>
-                            <h3>UserName <span>2 days ago</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
-                            <div class="comment-action">
-                                <img src="/frontend/image.folder/like.png">
-                                <span>244</span>
-                                <img src="/frontend/image.folder/dislike.png" >
-                                <span>2</span>
-                                <span>reply</span>
-                                <a href="">All reply</a>
-                            </div>
-                        </div>
-                     </div>
-                     <div class="old-comments">
-                        <img src="/frontend/image.folder/avatar.jpg" alt="">
-                        <div>
-                            <h3>UserName <span>2 days ago</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, velit ducimus?</p>
-                            <div class="comment-action">
-                                <img src="/frontend/image.folder/like.png">
-                                <span>244</span>
-                                <img src="/frontend/image.folder/dislike.png" >
-                                <span>2</span>
-                                <span>reply</span>
-                                <a href="">All reply</a>
-                            </div>
-                        </div>
-                     </div>
+                    </div>
                  </div>
             </div>
 
