--- a/frontend/play.folder/play.html
+++ b/frontend/play.folder/play.html
@@ -98,11 +98,12 @@
                             </div>
                             <div class="video_info">
                                 <div class="info_button">
-                                    <a href="" class="like_button">
-                                        <img src="/frontend/image.folder/like.png">
-                                        <p class="like">125</p>
+                                    <a  class="like_button">
+                                        <img src="/frontend/image.folder/like.png" class=" likeButton">
+                                        <p class="like likeCount" >125</p>
                                     </a>
-                                    <img src="/frontend/image.folder/dislike.png">
+                                    <div class="gap"><span></span></div>
+                                    <img src="/frontend/image.folder/dislike.png" class="dislikeButtonn">
                                 </div>
                                 <div class="share">
                                     <img src="/frontend/image.folder/share.png">
